(executable
 (public_name gen)
 (name gen)
 (package smaws-gen)
 (modules gen)
 (libraries Parselib yojson sdkgen))

(library
 (name model_tests)
 (package smaws-gen)
 (modules test_data_parser Gen_test_constructors Gen_test_functions)
 (libraries Parselib yojson base stdio alcotest))

(test
 (name test_parser_example)
 (modules test_parser_example)
 (libraries model_tests base stdio))

(test
 (name test_record)
 (modules test_record)
 (libraries Parselib))

(test
 (name test_params)
 (modules test_params)
 (libraries Parselib base stdio))

(test
 (name test_constructor_gen)
 (modules test_constructor_gen)
 (libraries model_tests yojson base stdio))

(test
 (name test_function_gen)
 (modules test_function_gen)
 (libraries model_tests yojson base stdio))
