(executable
 (name gen)
 (libraries yojson smithy_ast smaws_parse codegen sdkgen base))

(rule
 (targets
  (dir json))
 (mode promote)
 (deps
  (:gen ./gen.exe)
  (:input ../smithy-aws-protocol-tests_model.json)
  (:output_dir ./protocols))
 (action
  (run %{gen} %{input} %{output_dir} aws.protocoltests.json)))

(executable
 (name tests)
 (libraries yojson Parselib alcotest)
 (modules tests types))
