(executable
 (name http_get)
 (modules http_get)
 (libraries smaws-lib eio_main logs fmt))

(executable
 (name ini_examples)
 (modules ini_examples)
 (libraries smaws-lib eio_main logs fmt))

(executable
 (name sqs_ListQueues)
 (modules sqs_ListQueues)
 (libraries smaws-lib eio_main logs fmt smaws-clients))

(executable
 (name sqs_ListQueues_miou)
 (modules sqs_ListQueues_miou)
 (libraries smaws-lib miou logs fmt smaws-clients))

(executable
 (name signed)
 (modules signed)
 (modes byte exe)
 (libraries smaws-lib eio_main logs fmt))

(executable
 (name dynamodb_createTableAndWriteData)
 (modules dynamodb_createTableAndWriteData)
 (libraries smaws-lib eio_main logs fmt smaws-clients))
