(test
 (name aws_json_error_metadata_test)
 (modules aws_json_error_metadata_test)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (libraries
  model_tests_protocols
  Smaws_Lib
  eio_main
  alcotest
  Smaws_Test_Support_Lib))

(test
 (name request_test_example)
 (modules request_test_example)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (libraries
  model_tests_protocols
  Smaws_Lib
  eio_main
  alcotest
  Smaws_Test_Support_Lib))

(test
 (name aws_query_response_test)
 (modules aws_query_response_test)
 (libraries Smaws_Lib alcotest))

(test
 (name aws_query_serialize_test)
 (modules aws_query_serialize_test)
 (libraries Smaws_Lib alcotest))

(test
 (name xml_roundtrip_test)
 (modules xml_roundtrip_test)
 (libraries Smaws_Lib alcotest))

(test
 (name uint64_test)
 (modules uint64_test)
 (libraries Smaws_Lib alcotest))

(test
 (name http_bindings_test)
 (modules http_bindings_test)
 (libraries Smaws_Lib alcotest))

(test
 (name restxml_response_test)
 (modules restxml_response_test)
 (libraries Smaws_Lib alcotest))

(test
 (name restxml_serialize_test)
 (modules restxml_serialize_test)
 (libraries Smaws_Lib alcotest))

(test
 (name restxml_deserialize_test)
 (modules restxml_deserialize_test)
 (libraries Smaws_Lib alcotest))

(test
 (name xml_parse_error_test)
 (modules xml_parse_error_test)
 (libraries Smaws_Lib alcotest))
