(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/acm-pca/service/2017-08-22/acm-pca-2017-08-22.json)
  (:ocf %{bin:ocamlformat}))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_ACMPCA.ml
  Smaws_Client_ACMPCA.mli)
 (mode promote)
 (action
  (progn
   (run
    %{gen}
    -input
    %{input}
    -output
    .
    -targets
    builders
    types
    service_metadata
    serializers
    deserializers
    operations
    module)
   (run
    %{ocf}
    -i
    builders.ml
    builders.mli
    json_serializers.ml
    json_deserializers.ml
    service_metadata.ml
    service_metadata.mli
    types.ml
    types.mli
    operations.ml
    operations.mli
    Smaws_Client_ACMPCA.ml
    Smaws_Client_ACMPCA.mli))))

(library
 (name Smaws_Client_ACMPCA)
 (public_name smaws-clients.acm-pca)
 (modules
  Smaws_Client_ACMPCA
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
