(rule
  (mode promote)
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../api-models-aws/models/acm/service/2015-12-08/acm-2015-12-08.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_ACM.ml
  Smaws_Client_ACM.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_ACM)
 (public_name smaws-clients.acm)
 (modules
  Smaws_Client_ACM
  types
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
