(rule
 (mode promote)
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../definitions/acm.json))
 (targets
  builders.ml
  builders.mli
  serializers.ml
  deserializers.ml
  types.ml
  types.mli
  service_metadata.ml
  service_metadata.mli
  operations.ml
  operations.mli
  Smaws_Client_ACM.ml
  Smaws_Client_ACM.mli)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   service_metadata
   service_metadata
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_ACM)
 (public_name smaws-clients.acm)
 (modules
  Smaws_Client_ACM
  types
  service_metadata
  serializers
  deserializers
  operations
  builders)
 (libraries smaws-lib))
