(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/acm/service/2015-12-08/acm-2015-12-08.json))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_ACM.ml
  Smaws_Client_ACM.mli)
 (mode promote)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   service_metadata
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_ACM)
 (public_name smaws-clients.acm)
 (modules
  Smaws_Client_ACM
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
