(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/application-auto-scaling/service/2016-02-06/application-auto-scaling-2016-02-06.json)
  (:ocf %{bin:ocamlformat}))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_ApplicationAutoScaling.ml
  Smaws_Client_ApplicationAutoScaling.mli)
 (mode promote)
 (action
  (progn
   (run
    %{gen}
    -input
    %{input}
    -output
    .
    -targets
    builders
    types
    service_metadata
    serializers
    deserializers
    operations
    module)
   (run
    %{ocf}
    -i
    builders.ml
    builders.mli
    json_serializers.ml
    json_deserializers.ml
    service_metadata.ml
    service_metadata.mli
    types.ml
    types.mli
    operations.ml
    operations.mli
    Smaws_Client_ApplicationAutoScaling.ml
    Smaws_Client_ApplicationAutoScaling.mli))))

(library
 (name Smaws_Client_ApplicationAutoScaling)
 (public_name smaws-clients.application-auto-scaling)
 (modules
  Smaws_Client_ApplicationAutoScaling
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
