(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/application-discovery-service/service/2015-11-01/application-discovery-service-2015-11-01.json)
  (:ocf %{bin:ocamlformat}))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_ApplicationDiscoveryService.ml
  Smaws_Client_ApplicationDiscoveryService.mli)
 (mode promote)
 (action
  (progn
   (run
    %{gen}
    -input
    %{input}
    -output
    .
    -targets
    builders
    types
    service_metadata
    serializers
    deserializers
    operations
    module)
   (run
    %{ocf}
    -i
    builders.ml
    builders.mli
    json_serializers.ml
    json_deserializers.ml
    service_metadata.ml
    service_metadata.mli
    types.ml
    types.mli
    operations.ml
    operations.mli
    Smaws_Client_ApplicationDiscoveryService.ml
    Smaws_Client_ApplicationDiscoveryService.mli))))

(library
 (name Smaws_Client_ApplicationDiscoveryService)
 (public_name smaws-clients.application-discovery-service)
 (modules
  Smaws_Client_ApplicationDiscoveryService
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
