(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input ../../api-models-aws/models/apprunner/service/2020-05-15/apprunner-2020-05-15.json))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_AppRunner.ml
  Smaws_Client_AppRunner.mli)
(mode promote)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   service_metadata
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_AppRunner)
 (public_name smaws-clients.apprunner)
 (modules
  Smaws_Client_AppRunner
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
