(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/backup-gateway/service/2021-01-01/backup-gateway-2021-01-01.json))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_BackupGateway.ml
  Smaws_Client_BackupGateway.mli)
 (mode promote)
 (action
  (run
   %{gen}
   -input
   %{input}
   -output
   .
   -targets
   builders
   types
   service_metadata
   serializers
   deserializers
   operations
   module)))

(library
 (name Smaws_Client_BackupGateway)
 (public_name smaws-clients.backup-gateway)
 (modules
  Smaws_Client_BackupGateway
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
