(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/bcm-dashboards/service/2025-08-18/bcm-dashboards-2025-08-18.json)
  (:ocf %{bin:ocamlformat}))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_BCMDashboards.ml
  Smaws_Client_BCMDashboards.mli)
 (mode promote)
 (action
  (progn
   (run
    %{gen}
    -input
    %{input}
    -output
    .
    -targets
    builders
    types
    service_metadata
    serializers
    deserializers
    operations
    module)
   (run
    %{ocf}
    -i
    builders.ml
    builders.mli
    json_serializers.ml
    json_deserializers.ml
    service_metadata.ml
    service_metadata.mli
    types.ml
    types.mli
    operations.ml
    operations.mli
    Smaws_Client_BCMDashboards.ml
    Smaws_Client_BCMDashboards.mli))))

(library
 (name Smaws_Client_BCMDashboards)
 (public_name smaws-clients.bcm-dashboards)
 (modules
  Smaws_Client_BCMDashboards
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
