(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/bcm-recommended-actions/service/2024-11-14/bcm-recommended-actions-2024-11-14.json)
  (:ocf %{bin:ocamlformat}))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_BCMRecommendedActions.ml
  Smaws_Client_BCMRecommendedActions.mli)
 (mode promote)
 (action
  (progn
   (run
    %{gen}
    -input
    %{input}
    -output
    .
    -targets
    builders
    types
    service_metadata
    serializers
    deserializers
    operations
    module)
   (run
    %{ocf}
    -i
    builders.ml
    builders.mli
    json_serializers.ml
    json_deserializers.ml
    service_metadata.ml
    service_metadata.mli
    types.ml
    types.mli
    operations.ml
    operations.mli
    Smaws_Client_BCMRecommendedActions.ml
    Smaws_Client_BCMRecommendedActions.mli))))

(library
 (name Smaws_Client_BCMRecommendedActions)
 (public_name smaws-clients.bcm-recommended-actions)
 (modules
  Smaws_Client_BCMRecommendedActions
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
