(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/cloud9/service/2017-09-23/cloud9-2017-09-23.json)
  (:ocf %{bin:ocamlformat}))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_Cloud9.ml
  Smaws_Client_Cloud9.mli)
 (mode promote)
 (action
  (progn
   (run
    %{gen}
    -input
    %{input}
    -output
    .
    -targets
    builders
    types
    service_metadata
    serializers
    deserializers
    operations
    module)
   (run
    %{ocf}
    -i
    builders.ml
    builders.mli
    json_serializers.ml
    json_deserializers.ml
    service_metadata.ml
    service_metadata.mli
    types.ml
    types.mli
    operations.ml
    operations.mli
    Smaws_Client_Cloud9.ml
    Smaws_Client_Cloud9.mli))))

(library
 (name Smaws_Client_Cloud9)
 (public_name smaws-clients.cloud9)
 (modules
  Smaws_Client_Cloud9
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
