(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/cloudformation/service/2010-05-15/cloudformation-2010-05-15.json)
  (:ocf %{bin:ocamlformat}))
 (targets
  builders.ml
  builders.mli
  query_serializers.ml
  query_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_CloudFormation.ml
  Smaws_Client_CloudFormation.mli)
 (mode promote)
 (action
  (progn
   (run
    %{gen}
    -input
    %{input}
    -output
    .
    -targets
    builders
    types
    service_metadata
    serializers
    deserializers
    operations
    module)
   (run
    %{ocf}
    -i
    builders.ml
    builders.mli
    query_serializers.ml
    query_deserializers.ml
    service_metadata.ml
    service_metadata.mli
    types.ml
    types.mli
    operations.ml
    operations.mli
    Smaws_Client_CloudFormation.ml
    Smaws_Client_CloudFormation.mli))))

(library
 (name Smaws_Client_CloudFormation)
 (public_name smaws-clients.cloudformation)
 (modules
  Smaws_Client_CloudFormation
  types
  service_metadata
  query_serializers
  query_deserializers
  operations
  builders)
 (libraries smaws-lib))
