(rule
 (deps
  (:gen ../../bin/AwsGenerator.exe)
  (:input
   ../../api-models-aws/models/cloudhsm-v2/service/2017-04-28/cloudhsm-v2-2017-04-28.json)
  (:ocf %{bin:ocamlformat}))
 (targets
  builders.ml
  builders.mli
  json_serializers.ml
  json_deserializers.ml
  service_metadata.ml
  service_metadata.mli
  types.ml
  types.mli
  operations.ml
  operations.mli
  Smaws_Client_CloudHSMV2.ml
  Smaws_Client_CloudHSMV2.mli)
 (mode promote)
 (action
  (progn
   (run
    %{gen}
    -input
    %{input}
    -output
    .
    -targets
    builders
    types
    service_metadata
    serializers
    deserializers
    operations
    module)
   (run
    %{ocf}
    -i
    builders.ml
    builders.mli
    json_serializers.ml
    json_deserializers.ml
    service_metadata.ml
    service_metadata.mli
    types.ml
    types.mli
    operations.ml
    operations.mli
    Smaws_Client_CloudHSMV2.ml
    Smaws_Client_CloudHSMV2.mli))))

(library
 (name Smaws_Client_CloudHSMV2)
 (public_name smaws-clients.cloudhsm-v2)
 (modules
  Smaws_Client_CloudHSMV2
  types
  service_metadata
  json_serializers
  json_deserializers
  operations
  builders)
 (libraries smaws-lib))
